@@ -1,6 +1,9 @@
 :mod:`webhelpers.feedgenerator`
 ================================================
 
+This is a port of Django's feeed generator for creating RSS and Atom feeds.
+The Geo classes are also ported for publishing geographical (GIS) data.
+
 .. automodule:: webhelpers.feedgenerator
 
 .. currentmodule:: webhelpers.feedgenerator
@@ -40,3 +43,28 @@ Functions
 .. autofunction:: rfc2822_date
 .. autofunction:: rfc3339_date
 .. autofunction:: get_tag_uri
+
+GIS subclasses
+--------------
+
+These classes allow you to include geometries (e.g., latitude/longitude) in
+your feed. The implementation is in a mixin class:
+
+.. autoclass:: GeoFeedMixin
+   :members:
+
+   Methods:
+
+Two concrete subclasses are provided:
+
+.. autoclass:: GeoAtom1Feed
+   :members:
+
+.. autoclass:: W3CGeoFeed
+   :members:
+
+A minimal geometry class is included:
+
+.. autoclass:: Geometry
+   :members:
+
